# hackathon-poc-x-aleph-2024

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/cli/: mod.rs
src/core/: inode.rs  mod.rs
src/http/: client.rs  mod.rs  request.rs
src/mirroring/: directory.rs  entry.rs  entry_type.rs  file.rs  filesystem.rs  fs_tree.rs  mod.rs  sym_link.rs
src/mirroring/testdata/dir_with_multi_level_depth/: expected.json
src/mirroring/testdata/dir_with_one_level_depth/: expected.json
src/mirroring/testdata/simple_dir_with_multiple_files/: expected.json
src/mirroring/testdata/simple_dir_with_one_file/: expected.json
src/mirroring/testdata/simple_dir_with_symlink/: expected.json
src/sdk/: mod.rs
src/sdk/common/v0/: message.rs  mod.rs  signer.rs  storage.rs
src/sdk/post/: mod.rs
src/sdk/post/v0/: mod.rs  req_objects.rs  res_objects.rs
src/sdk/store/: mod.rs
src/sdk/store/v0/: mod.rs
